[package]
name = "oauth2-http-client"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
oauth2 = { version = "5.0", default-features = false }
tokio = { version = "1.49", features = ["macros", "rt", "test-util"] }

[dev-dependencies]
reqwest = "0.13"
serde_json = "1.0"
wiremock = "0.6"
